
2023-02-21  Simon Sobisch <simonsobisch@gnu.org>

	* codegen.c, flag.def [COBC_HAS_CUTOFF_FLAG]: fix compile errors,
	  output -fif-cutoff to help when available

2022-02-20  Fabrice Le Fessant <fabrice.le_fessant@ocamlpro.com>

	* scanner.l (read_literal): refactor to use enum cb_literal_type
	  instead of a char* for the type of literal
	* pplex.l: allow REPLACE between Gcos CONTROL DIVISION and
	  the IDENTIFICATION DIVISION

2023-02-10  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (clean_up_intermediates): fix missing move of temporary files
	  when --save-temps=dir is used in combination with -g
	* field.c (cb_build_field_tree), tree.h, parser.y: pass level number as
	  integer, not as cb_tree

2023-02-09  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (validate_alphabet): slightly rewritten to fix compiler warnings
	* config.c, pparse.y (ppp_replace_list_add), reserved.c (is_invalid_word),
	  tree.c, tree.h, typeck.c: minor adjustments to fix compiler warnings
	* field.c (validate_multi_value, validate_elem_value),
	  parser.y (setup_external_definition): fixed analyzer warnings by switching
	  "for" (hint at "possibly NULL" at start) to "while"

2023-02-08  Simon Sobisch <simonsobisch@gnu.org>

	* cobc.c (rep_name_list): elide PICTURE string in symbol listing
	  when too long (also fixing a possible SIGSEGV on WIN32)
	* cobc.h: fixed prototype for cobc_set_listing_header_code,
	  cobc_get_margin_a, cobc_get_margin_b
	* cobc.c: remove trailing slash from -I and -L as those break some
	  tab-completed command lines and -MD generation
	* cobc.c [_WIN32, DOS]: replace forward slash to backslash for -I
	  fixing -MD generation on mingws/msys environments
	* pplex.l (ppcopy_find_file, ppcopy): replace slash to match system and
	  always place name in buffer to allow this

2023-02-07  Simon Sobisch <simonsobisch@gnu.org>

	* typeck.c (cb_build_optim_cond): generate cob_bcd_cmp call for COMP-3/COMP-6