@@ -242,6 +242,7 @@ national-character-literals:		unconformable
 # TO-DO: Add separate config option for H"..." to be unsupported,numeric,non-numeric(acu)
 acu-literals:			ok
 hp-octal-literals:			unconformable
+ebcdic-symbolic-characters:		no
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
