@@ -239,6 +239,7 @@ hexadecimal-national-literals:		ok
 national-character-literals:		unconformable
 acu-literals:				unconformable
 hp-octal-literals:			unconformable
+ebcdic-symbolic-characters:		no
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
