@@ -240,6 +240,7 @@ national-character-literals:		unconformable
 acu-literals:			unconformable
 hp-octal-literals:			unconformable
 word-continuation:			archaic
+ebcdic-symbolic-characters:		no
 not-exception-before-exception:		ok
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
