@@ -259,6 +259,7 @@ national-character-literals:		warning
 # TO-DO: Add separate config option for H"..." to be unsupported,numeric,non-numeric(acu)
 acu-literals:				unconformable
 hp-octal-literals:			unconformable
+ebcdic-symbolic-characters:		no
 word-continuation:			warning
 not-exception-before-exception:		ok
 accept-display-extensions:		ok
