@@ -237,6 +237,7 @@ hexadecimal-national-literals:		unconformable
 national-character-literals:		unconformable
 acu-literals:			unconformable
 hp-octal-literals:			unconformable
+ebcdic-symbolic-characters:		no
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
