@@ -242,6 +242,7 @@ national-character-literals:		unconformable
 # TO-DO: Add separate config options for H"..." , Z"...", G"..." and N"..." to be ok
 acu-literals:				unconformable
 hp-octal-literals:			unconformable
+ebcdic-symbolic-characters:		no
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
