@@ -244,6 +244,7 @@ national-character-literals:		unconformable
 # TO-DO: Add separate config option for H"..." to be unsupported,numeric(rm/mf),non-numeric
 acu-literals:			unconformable
 hp-octal-literals:			unconformable
+ebcdic-symbolic-characters:		no
 word-continuation:			ok
 not-exception-before-exception:		unconformable
 accept-display-extensions:		ok
