@@ -258,6 +258,7 @@ national-character-literals:		unconformable
 acu-literals:				unconformable
 hp-octal-literals:			unconformable
 word-continuation:			obsolete	# even for literals (as it added concatenation of literals by &)!
+ebcdic-symbolic-characters:		no
 not-exception-before-exception:		unconformable
 accept-display-extensions:		unconformable
 renames-uncommon-levels:		unconformable
